--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # CakePHP specific files #
 ##########################
-
+config/app.php
+/config/.env
+/logs/*
+/tmp/*
 
 # OS generated files #
 ######################
